added the position for the background images

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
   min-height: 100vh;
   font-family: "Kumbh Sans", sans-serif;
   background-color: var(--Darkcyan);
+  background-image: url(images/bg-pattern-top.svg),
+  url(images/bg-pattern-bottom.svg);
+background-repeat: no-repeat;
+background-position: right 50vw bottom 42vh, left 47vw top 46vh;
 
   /* background-image: url(images/bg-pattern-top.svg),
     url(images/bg-pattern-bottom.svg);
